creation of setup